syntax = "proto3";

package order.middleware.order1.lock.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/order/middleware/v1/order/lock";

import "basetypes/order/v1/enums.proto";
import "basetypes/good/v1/enums.proto";
import "basetypes/v1/conds.proto";

message OrderLockReq {
  optional uint32 ID = 10;
  optional string EntID = 20;
  optional string UserID = 40;
  optional string OrderID = 50;
  optional basetypes.order.v1.OrderLockType LockType = 60;
}

message OrderLock {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 20;
  // @inject_tag: sql:"app_id"
  string AppID = 30;
  // @inject_tag: sql:"user_id"
  string UserID = 40;
  // @inject_tag: sql:"order_id"
  string OrderID = 50;
  // @inject_tag: sql:"good_type"
  string GoodTypeStr = 60;
  basetypes.good.v1.GoodType GoodType = 70;
  // @inject_tag: sql:"order_user_id"
  string OrderUserID = 80;
  // @inject_tag: sql:"lock_type"
  string LockTypeStr = 90;
  basetypes.order.v1.OrderLockType LockType = 100;

  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 1000;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 1010;
}

message Conds {
  // order
  basetypes.v1.Uint32Val ID = 10;
  basetypes.v1.Uint32SliceVal IDs = 20;
  basetypes.v1.StringVal EntID = 30;
  basetypes.v1.StringVal AppID = 40;
  basetypes.v1.StringVal UserID = 50;
  basetypes.v1.StringSliceVal UserIDs = 60;
  basetypes.v1.StringVal OrderID = 70;
  basetypes.v1.StringSliceVal OrderIDs = 80;
  basetypes.v1.Uint32Val LockType = 90;
}

